salesforce/force-app/main/default/objects/Northstar_Message__c/Northstar_Message__c.object-meta.xml
<CustomObject>
    <description>An email, push, or SMS message saved from the Northstar workbench after human confirmation. Drafts only; nothing is sent.</description>
    <label>Northstar Message</label>
    <nameField>
        <label>Message Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Northstar Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>