salesforce/force-app/main/default/objects/Northstar_Message__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>The message body as confirmed in the workbench.</description>
    <label>Body</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>