salesforce/force-app/main/default/objects/Northstar_Message__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Email, Push, or SMS.</description>
    <label>Channel</label>
    <length>40</length>
    <type>Text</type>
</CustomField>