salesforce/force-app/main/default/objects/Northstar_Message__c/fields/Draft_Version__c.field-meta.xml
<CustomField>
    <fullName>Draft_Version__c</fullName>
    <description>The workbench draft version that was confirmed.</description>
    <label>Draft Version</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>