salesforce/force-app/main/default/objects/Northstar_Message__c/fields/Northstar_Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Northstar_Idempotency_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Northstar Idempotency Key</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>