salesforce/force-app/main/default/objects/Northstar_Message__c/fields/Preheader__c.field-meta.xml
<CustomField>
    <fullName>Preheader__c</fullName>
    <description>Email preheader.</description>
    <label>Preheader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>