salesforce/force-app/main/default/objects/Northstar_Message__c/fields/Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Send_Time__c</fullName>
    <description>Proposed send time; nothing is scheduled.</description>
    <label>Send Time</label>
    <length>120</length>
    <type>Text</type>
</CustomField>