salesforce/force-app/main/default/objects/Northstar_Message__c/fields/Source_Draft_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Draft_Id__c</fullName>
    <description>The workbench draft this record was saved from.</description>
    <label>Source Draft ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>