salesforce/force-app/main/default/objects/Northstar_Message__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Draft until a person approves it elsewhere.</description>
    <label>Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>