salesforce/force-app/main/default/objects/Northstar_Message__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>Email subject line or push headline.</description>
    <label>Subject or Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>